# feeder.old

./: .env  .gitignore  Cargo.toml
app/: Main.elm  app.css  app.js  brunch-config.js  elm-package.json  index.html  package-lock.json  package.json
app/css/: style.css
app/elm/: Main.elm  elm-package.json
app/js/: app.js  main.js
app/static/: index.html
frontend/: .eslintrc.json  Cargo.toml  index.css  index.html  index.js  package-lock.json  package.json
frontend/actions/: index.js
frontend/api/: index.js
frontend/components/: Channel.js  ChannelList.js  Form.js  Item.js  ItemList.js  Modal.js
frontend/containers/: AddChannelForm.js  FilterChannels.js  FilterItems.js  Modal.js  ToolBar.js
frontend/reducers/: index.js
frontend/src/: feeder.rs  lib.rs  main.rs
frontend/static/: index.html  style.css
migrations/2018-01-31-184205_create_categories/: up.sql
migrations/2018-01-31-193000_create_channels/: down.sql  up.sql
migrations/2018-01-31-193253_categories_add_channel_id/: down.sql  up.sql
migrations/2018-01-31-214743_create_items/: up.sql
migrations/2018-01-31-215348_create_items_categories/: down.sql  up.sql
migrations/2018-05-12-084943_create_users/: up.sql
migrations/2018-05-12-085041_create_subscriptions/: up.sql
migrations/2018-05-12-100443_create_read_items/: down.sql  up.sql
src/: actors.rs  graphql.rs  lib.rs  models.rs  queries.rs  schema.rs
test_xml/: rep.xml
