[package]
name = "feeder"
version = "0.1.0"
authors = ["Yuri Iozzelli <y.iozzelli@gmail.com>"]

[dependencies]
diesel = { version = "^1.1.0", features = ["postgres", "r2d2", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.9.0"
rss = "1.2.1"
quicli = "0.1.2"
structopt = "0.1.7"
reqwest = "0.8.4"
r2d2 = "0.8.2"
serde = "1.0.27"
serde_derive = "1.0.27"
actix = "0.5"
actix-web = "0.6"
futures = "0.1"
env_logger = "0.5.10"
serde_json = "1.0.17"
log = "0.4.1"
