[package]
name = "feeder"
version = "0.1.0"
authors = ["Yuri Iozzelli <y.iozzelli@gmail.com>"]

[dependencies]
diesel = { version = "1.3.2", features = ["postgres", "r2d2", "chrono"] }
chrono = { version = "0.4.6", features = ["serde"] }
dotenv = "0.13.0"
rss = "1.5.0"
quicli = "0.3.0"
structopt = "0.2.10"
reqwest = "0.8.8"
r2d2 = "0.8.2"
serde = "1.0.76"
serde_derive = "1.0.76"
actix = "0.7.4"
actix-web = "0.7.5"
futures = "0.1.23"
env_logger = "0.5.13"
serde_json = "1.0.26"
log = "0.4.5"
