[package]
name = "feeder"
version = "0.1.0"
authors = ["Yuri Iozzelli <y.iozzelli@gmail.com>"]
edition = "2018"

[dependencies]
diesel = { version = "1.4.1", features = ["postgres", "r2d2", "chrono"] }
chrono = { version = "0.4.6", features = ["serde"] }
dotenv = "0.13.0"
rss = "1.6.1"
quicli = "0.4.0"
structopt = "0.2.14"
reqwest = "0.9.10"
r2d2 = "0.8.3"
serde = "1.0.88"
serde_derive = "1.0.88"
actix = "0.7.9"
actix-web = "0.7.18"
futures = "0.1.25"
env_logger = "0.6.0"
serde_json = "1.0.38"
log = "0.4.6"
juniper = "0.11.1"
